--- a/index.html
+++ b/index.html
@@ -2,63 +2,65 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RS Brindes - Brindes Personalizados</title>
-  <link rel="stylesheet" href="public/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>RS Brindes — Brindes Personalizados B2B</title>
+  <meta name="description" content="RS Brindes — 21 anos de mercado. Fornecedor B2B de brindes personalizados. Entrega em até 72h.">
+  <link rel="stylesheet" href="public/style.css?v=7"/>
 </head>
 <body>
 
-  <!-- Header -->
-  <header class="header gradient">
-    <div class="container nav">
-      <a href="index.html" class="brand">
-        <img src="public/img/logo.png" alt="RS Brindes" class="logo">
-        <span>RS Brindes</span>
-      </a>
-      <nav class="menu">
-        <a href="index.html" class="active">Início</a>
-        <a href="sobre.html">Sobre</a>
-        <a href="catalogo.html">Catálogo</a>
-        <a href="blog.html">Blog</a>
-        <a href="contato.html">Contato</a>
-      </nav>
+<header class="header gradient">
+  <nav class="nav container">
+    <a class="brand" href="index.html" aria-label="RS Brindes - Início">
+      <img src="public/img/logo/logo.png" alt="RS Brindes" class="logo-img"/>
+      <span class="brand-name">RS Brindes</span>
+    </a>
+    <div class="menu">
+      <a href="index.html" class="active">Início</a>
+      <a href="sobre.html">Sobre</a>
+      <a href="catalogo.html">Catálogo</a>
+      <a href="orcamento.html">Orçamento</a>
+      <a href="blog.html">Blog</a>
+      <a href="contato.html">Contato</a>
     </div>
-  </header>
+  </nav>
+</header>
 
-  <!-- Banner -->
-  <section class="hero gradient">
-    <div class="container">
-      <h1>Brindes Personalizados para sua Empresa</h1>
-      <p>Qualidade, agilidade e criatividade para surpreender seus clientes.</p>
-      <p class="entrega-msg">🚚 Entregamos seus brindes personalizados em até <strong>72h</strong>!</p>
+<section class="container">
+  <div class="hero gradient">
+    <h1>Brindes que geram lembranças e negócios</h1>
+    <p class="hero-sub">Fornecedor B2B com 21 anos de experiência. Qualidade, escala e prazos confiáveis.</p>
+    <p class="entrega-msg">🚚 <strong>Entregamos seus brindes personalizados em até 72h</strong> — produção ágil em todo o Brasil.</p>
+    <div class="hero-ctas">
+      <a class="btn btn-primary" href="catalogo.html">Ver Catálogo</a>
+      <a class="btn btn-light" href="orcamento.html">Solicitar Orçamento</a>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Slider -->
-  <section class="slider">
-    <div class="slides">
-      <img src="public/img/destaque/slide1.jpg" alt="Destaque 1">
-      <img src="public/img/destaque/slide2.jpg" alt="Destaque 2">
-      <img src="public/img/destaque/slide3.jpg" alt="Destaque 3">
-    </div>
-  </section>
+<section class="section container">
+  <div class="slider" id="slider">
+    <div class="slide active"><img src="public/img/destaque/slide1.jpg" alt="RS Brindes — institucional"></div>
+    <div class="slide"><img src="public/img/destaque/slide2.jpg" alt="Produtos de destaque RS Brindes"></div>
+    <div class="slide"><img src="public/img/destaque/slide3.jpg" alt="Entrega rápida em até 72h"></div>
+  </div>
+  <div class="slider-dots" id="slider-dots"></div>
+</section>
 
-  <!-- Produtos em destaque -->
-  <section class="section">
-    <div class="container">
-      <h2>Produtos em Destaque</h2>
-      <div id="grid" class="grid products"></div>
-    </div>
-  </section>
+<section class="section">
+  <div class="container">
+    <h2 class="section-title">✨ Produtos em Destaque</h2>
+    <div id="featured-grid" class="grid products"></div>
+  </div>
+</section>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container foot">
-      <p>© <span id="year"></span> RS Brindes — Todos os direitos reservados.</p>
-      <p>📍 Entregamos em todo o Brasil</p>
-    </div>
-  </footer>
+<footer class="footer">
+  <div class="container foot">
+    <span>© <span id="year"></span> RS Brindes</span>
+    <span>Campinas/SP • WhatsApp: (19) 98185-9815 • rsbrindes2020@gmail.com</span>
+  </div>
+</footer>
 
-  <script src="public/script.js"></script>
+<script src="public/script.js?v=7"></script>
 </body>
 </html>
