--- a/sobre.html
+++ b/sobre.html
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sobre Nós - RS Brindes</title>
-  <link rel="stylesheet" href="public/style.css">
+  <link rel="stylesheet" href="public/style.css?v=7"/>
 </head>
 <body>
 
-  <!-- Header -->
-  <header class="header gradient">
-    <div class="container nav">
-      <a href="index.html" class="brand">
-        <img src="public/img/logo.png" alt="RS Brindes" class="logo">
-        <span>RS Brindes</span>
-      </a>
-      <nav class="menu">
-        <a href="index.html">Início</a>
-        <a href="sobre.html" class="active">Sobre</a>
-        <a href="catalogo.html">Catálogo</a>
-        <a href="blog.html">Blog</a>
-        <a href="contato.html">Contato</a>
-      </nav>
+<header class="header gradient">
+  <nav class="nav container">
+    <a class="brand" href="index.html">
+      <img src="public/img/logo/logo.png" alt="RS Brindes" class="logo-img"/>
+      <span class="brand-name">RS Brindes</span>
+    </a>
+    <div class="menu">
+      <a href="index.html">Início</a>
+      <a href="sobre.html" class="active">Sobre</a>
+      <a href="catalogo.html">Catálogo</a>
+      <a href="orcamento.html">Orçamento</a>
+      <a href="blog.html">Blog</a>
+      <a href="contato.html">Contato</a>
     </div>
-  </header>
+  </nav>
+</header>
 
-  <section class="section">
-    <div class="container">
-      <h1>Sobre Nós</h1>
-      <p>A <strong>RS Brindes</strong> nasceu com a missão de oferecer brindes personalizados com qualidade, agilidade e criatividade. Nosso compromisso é transformar ideias em experiências memoráveis para marcas e clientes.</p>
+<section class="section container">
+  <h1>Sobre a RS Brindes</h1>
+  <p>Somos especialistas em brindes personalizados há mais de 21 anos. Após 5 anos atuando como terceirizados, nos consolidamos como fornecedor <strong>B2B</strong> para empresas, agências e times de marketing, com escala, qualidade e prazos confiáveis.</p>
+  <p class="entrega-msg">🚚 Entrega garantida em até <strong>72 horas</strong> após aprovação do pedido.</p>
 
-      <h2>Missão</h2>
-      <p>Fornecer brindes personalizados de alta qualidade com produção ágil em até <strong>72 horas</strong>, encantando nossos clientes e fortalecendo marcas.</p>
-
-      <h2>Visão</h2>
-      <p>Ser referência nacional em brindes personalizados, reconhecida pela excelência no atendimento e inovação constante.</p>
-
-      <h2>Valores</h2>
-      <ul>
-        <li>🚀 Agilidade</li>
-        <li>🤝 Comprometimento</li>
-        <li>💡 Criatividade</li>
-        <li>⭐ Qualidade</li>
+  <div class="grid features">
+    <div class="card card-pad">
+      <h3>Missão</h3>
+      <p>Oferecer soluções criativas e personalizadas em brindes, fortalecendo marcas com agilidade e excelência.</p>
+    </div>
+    <div class="card card-pad">
+      <h3>Visão</h3>
+      <p>Ser referência nacional em brindes corporativos, reconhecida pela qualidade, rapidez e inovação.</p>
+    </div>
+    <div class="card card-pad">
+      <h3>Valores</h3>
+      <ul class="vals">
+        <li>Compromisso com o cliente</li>
+        <li>Agilidade e qualidade</li>
+        <li>Inovação constante</li>
+        <li>Transparência e ética</li>
+        <li>Parcerias duradouras</li>
       </ul>
     </div>
-  </section>
+  </div>
+</section>
 
-  <footer class="footer">
-    <div class="container foot">
-      <p>© <span id="year"></span> RS Brindes — Todos os direitos reservados.</p>
-    </div>
-  </footer>
+<footer class="footer">
+  <div class="container foot">
+    <span>© <span id="year"></span> RS Brindes</span>
+    <span>Entrega em até 72h 🚀</span>
+  </div>
+</footer>
 
+<script src="public/script.js?v=7"></script>
 </body>
 </html>
