--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>RS Brindes — Brindes Personalizados B2B</title>
   <meta name="description" content="RS Brindes — 21 anos de mercado. Fornecedor B2B de brindes personalizados. Entrega em até 72h.">
-  <link rel="stylesheet" href="public/style.css?v=8"/>
+  <link rel="stylesheet" href="public/style.css?v=9"/>
 </head>
 <body>
 
 <header class="header gradient">
   <nav class="nav container">
-    <a class="brand" href="index.html" aria-label="RS Brindes - Início">
+    <a class="brand" href="index.html" aria-label="RS Brindes — Início">
       <img src="public/img/logo/logo.png" alt="RS Brindes" class="logo-img"/>
-      <span class="brand-name">RS Brindes</span>
     </a>
     <div class="menu">
       <a href="index.html" class="active">Início</a>
@@ -40,9 +39,29 @@
 
 <section class="section container">
   <div class="slider" id="slider">
-    <div class="slide active"><img src="public/img/destaque/slide1.jpg" alt="RS Brindes — institucional"></div>
-    <div class="slide"><img src="public/img/destaque/slide2.jpg" alt="Produtos de destaque RS Brindes"></div>
-    <div class="slide"><img src="public/img/destaque/slide3.jpg" alt="Entrega rápida em até 72h"></div>
+    <div class="slide active">
+      <img src="public/img/destaque/slide1.jpg" alt="RS Brindes — institucional">
+      <div class="caption">
+        <h2>Brindes personalizados para sua empresa</h2>
+        <p>Qualidade, escala e prazos confiáveis</p>
+      </div>
+    </div>
+
+    <div class="slide">
+      <img src="public/img/destaque/slide2.jpg" alt="Produtos de destaque RS Brindes">
+      <div class="caption">
+        <h2>Os queridinhos das empresas</h2>
+        <p>Canecas • Bolsas térmicas • Chaveiros • Copos</p>
+      </div>
+    </div>
+
+    <div class="slide">
+      <img src="public/img/destaque/slide3.jpg" alt="Entrega rápida em até 72h">
+      <div class="caption">
+        <h2>🚚 Entregamos em até 72h</h2>
+        <p>Produção ágil e eficiente em todo o Brasil</p>
+      </div>
+    </div>
   </div>
   <div class="slider-dots" id="slider-dots"></div>
 </section>
@@ -61,6 +80,6 @@
   </div>
 </footer>
 
-<script src="public/script.js?v=8"></script>
+<script src="public/script.js?v=9"></script>
 </body>
 </html>
