--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Blog - RS Brindes</title>
-  <link rel="stylesheet" href="public/style.css?v=8"/>
+  <link rel="stylesheet" href="public/style.css?v=9"/>
 </head>
 <body>
 
@@ -12,7 +12,6 @@
   <nav class="nav container">
     <a class="brand" href="index.html">
       <img src="public/img/logo/logo.png" alt="RS Brindes" class="logo-img"/>
-      <span class="brand-name">RS Brindes</span>
     </a>
     <div class="menu">
       <a href="index.html">Início</a>
@@ -31,7 +30,7 @@
 
   <div class="grid products">
     <article class="card">
-      <img class="product" src="public/img/destaque/slide1.jpg" alt="Ideias de brindes corporativos">
+      <img class="product" src="public/img/blog/post1.jpg" alt="Ideias de brindes corporativos">
       <div class="card-pad">
         <h2 class="title">🎁 5 Ideias de Brindes para Eventos Corporativos</h2>
         <p class="cat">Postagem de exemplo</p>
@@ -41,7 +40,7 @@
     </article>
 
     <article class="card">
-      <img class="product" src="public/img/destaque/slide2.jpg" alt="Entrega rápida">
+      <img class="product" src="public/img/blog/post2.jpg" alt="Entrega rápida">
       <div class="card-pad">
         <h2 class="title">🚀 Como garantimos entrega em até 72h</h2>
         <p class="cat">Postagem de exemplo</p>
@@ -51,7 +50,7 @@
     </article>
 
     <article class="card">
-      <img class="product" src="public/img/destaque/slide3.jpg" alt="Tendências 2025">
+      <img class="product" src="public/img/blog/post3.jpg" alt="Tendências 2025">
       <div class="card-pad">
         <h2 class="title">✨ Tendências em Brindes Personalizados (2025)</h2>
         <p class="cat">Postagem de exemplo</p>
@@ -69,6 +68,6 @@
   </div>
 </footer>
 
-<script src="public/script.js?v=8"></script>
+<script src="public/script.js?v=9"></script>
 </body>
 </html>
