--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header class="header gradient">
   <nav class="nav container">
     <a class="brand" href="index.html" aria-label="RS Brindes — Início">
-      <img src="public/img/logo/logo.png (2).png" alt="RS Brindes" class="logo-img"/>
+      <img src="public/img/logo/logo2.png" alt="RS Brindes" class="logo-img"/>
     </a>
     <div class="menu">
       <a href="index.html" class="active">Início</a>
