--- a/index.html
+++ b/index.html
@@ -55,16 +55,14 @@
       </div>
     </div>
 
-    <div class="slide">
-      <img src="public/img/destaque/slide3.jpg" alt="Entrega rápida em até 72h">
-      <div class="caption">
-        <h2>🚚 Entregamos em até 72h</h2>
-        <p>Produção ágil e eficiente em todo o Brasil</p>
-      </div>
-    </div>
+    <div c<div class="slide slide-72h">
+  <img src="public/img/destaque/slide3.jpg" alt="Entrega rápida em até 72h">
+  <div class="caption">
+    <h2>🚚 Entregamos em até 72h</h2>
+    <p>Produção ágil e eficiente em todo o Brasil</p>
   </div>
-  <div class="slider-dots" id="slider-dots"></div>
-</section>
+</div>
+
 
 <section class="section">
   <div class="container">
