--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@
       </div>
     </div>
 
-    <div class="slide">
+    <section class="section container">
+  <div class="slider" id="slider">
+    <!-- SLIDE 1 -->
+    <div class="slide active" data-slide="1">
+      <img src="public/img/destaque/slide1.jpg" alt="RS Brindes — institucional">
+      <div class="caption">
+        <h2>Brindes personalizados para sua empresa</h2>
+        <p>Qualidade, escala e prazos confiáveis</p>
+      </div>
+    </div>
+
+    <!-- SLIDE 2 -->
+    <div class="slide" data-slide="2">
       <img src="public/img/destaque/slide2.jpg" alt="Produtos de destaque RS Brindes">
       <div class="caption">
         <h2>Os queridinhos das empresas</h2>
@@ -55,14 +67,19 @@
       </div>
     </div>
 
-    <div c<div class="slide slide-72h">
-  <img src="public/img/destaque/slide3.jpg" alt="Entrega rápida em até 72h">
-  <div class="caption">
-    <h2>🚚 Entregamos em até 72h</h2>
-    <p>Produção ágil e eficiente em todo o Brasil</p>
+    <!-- SLIDE 3 (72h) -->
+    <div class="slide slide-72h" data-slide="3">
+      <img src="public/img/destaque/slide3.jpg" alt="Entrega rápida em até 72h">
+      <div class="caption">
+        <h2>🚚 Entregamos em até 72h</h2>
+        <p>Produção ágil e eficiente em todo o Brasil</p>
+      </div>
+    </div>
   </div>
-</div>
 
+  <!-- pontos do slider -->
+  <div class="slider-dots" id="slider-dots" aria-label="Navegação do slider"></div>
+</section>
 
 <section class="section">
   <div class="container">
