--- a/index.html
+++ b/index.html
@@ -67,15 +67,14 @@
       </div>
     </div>
 
-    <!-- SLIDE 3 (72h) -->
-    <div class="slide slide-72h" data-slide="3">
-      <img src="public/img/destaque/slide3.jpg" alt="Entrega rápida em até 72h">
-      <div class="caption">
-        <h2>🚚 Entregamos em até 72h</h2>
-        <p>Produção ágil e eficiente em todo o Brasil</p>
-      </div>
-    </div>
+  <!-- SLIDE 3 (72h) -->
+<div class="slide slide-72h" data-slide="4">
+  <img src="public/img/destaque/slide4.jpg" alt="Entrega em até 72h">
+  <div class="caption">
+    <h2>🚚 Entregamos seus brindes personalizados em até 72h</h2>
+    <p>Produção ágil e eficiente em todo o Brasil</p>
   </div>
+</div>
 
   <!-- pontos do slider -->
   <div class="slider-dots" id="slider-dots" aria-label="Navegação do slider"></div>
