--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="slide slide-72h" data-slide="4">
   <img src="public/img/destaque/slide4.jpg" alt="Entrega em até 72h">
   <div class="caption">
-    <h2>🚚 Entregamos seus brindes<br>personalizados em até 72h</h2>
+    <h2>🚚 Entregamos seus brindes personalizados em até 72h</h2>
     <p>Produção ágil e eficiente em todo o Brasil</p>
   </div>
 </div>
