--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="slider" id="slider">
     <!-- SLIDE 1 -->
     <div class="slide active" data-slide="1">
-      <img src="public/img/destaque/slide1.jpg" alt="RS Brindes — institucional">
+      <img src="public/img/destaque/slide1.jpg?v=14" alt="RS Brindes — institucional">
       <div class="caption">
         <h2>Brindes personalizados para sua empresa</h2>
         <p>Qualidade, escala e prazos confiáveis</p>
@@ -60,21 +60,13 @@
 
     <!-- SLIDE 2 -->
     <div class="slide" data-slide="2">
-      <img src="public/img/destaque/slide2.jpg" alt="Produtos de destaque RS Brindes">
+      <img src="public/img/destaque/slide2.jpg?v=14" alt="Produtos de destaque RS Brindes">
       <div class="caption">
         <h2>Os queridinhos das empresas</h2>
         <p>Canecas • Bolsas térmicas • Chaveiros • Copos</p>
       </div>
     </div>
-
-  <!-- SLIDE 3 (72h) -->
-<div class="slide slide-72h" data-slide="4">
-  <img src="public/img/destaque/slide4.jpg" alt="Entrega em até 72h">
-  <div class="caption">
-    <h2>🚚 Entregamos seus brindes personalizados em até 72h</h2>
-    <p>Produção ágil e eficiente em todo o Brasil</p>
   </div>
-</div>
 
   <!-- pontos do slider -->
   <div class="slider-dots" id="slider-dots" aria-label="Navegação do slider"></div>
